add settledAt to positions entity and rename atDate to gotDate.